err/gargoyle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_jsonfield-0.9.12.egg-info'...
Listing './lib/python3.5/site-packages/django_modeldict-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/example_module'...
Listing './lib/python3.5/site-packages/example_project'...
Compiling './lib/python3.5/site-packages/example_project/settings.py'...
***   File "./lib/python3.5/site-packages/example_project/settings.py", line 127
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gargoyle'...
Compiling './lib/python3.5/site-packages/gargoyle/__init__.py'...
***   File "./lib/python3.5/site-packages/gargoyle/__init__.py", line 14
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gargoyle/conditions.py'...
***   File "./lib/python3.5/site-packages/gargoyle/conditions.py", line 155
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gargoyle/management'...
Listing './lib/python3.5/site-packages/gargoyle/management/commands'...
Listing './lib/python3.5/site-packages/gargoyle/media'...
Listing './lib/python3.5/site-packages/gargoyle/media/css'...
Listing './lib/python3.5/site-packages/gargoyle/media/img'...
Listing './lib/python3.5/site-packages/gargoyle/media/js'...
Listing './lib/python3.5/site-packages/gargoyle/migrations'...
Compiling './lib/python3.5/site-packages/gargoyle/nexus_modules.py'...
***   File "./lib/python3.5/site-packages/gargoyle/nexus_modules.py", line 49
    except GargoyleException, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gargoyle/templates'...
Listing './lib/python3.5/site-packages/gargoyle/templates/gargoyle'...
Listing './lib/python3.5/site-packages/gargoyle/templates/gargoyle/nexus'...
Listing './lib/python3.5/site-packages/gargoyle/templatetags'...
Listing './lib/python3.5/site-packages/gargoyle-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/jsonfield'...
Listing './lib/python3.5/site-packages/jsonfield/templatetags'...
Listing './lib/python3.5/site-packages/jsonfield/tests'...
Listing './lib/python3.5/site-packages/jsonfield/tests/jsonfield_test_app'...
Listing './lib/python3.5/site-packages/modeldict'...
Compiling './lib/python3.5/site-packages/modeldict/__init__.py'...
***   File "./lib/python3.5/site-packages/modeldict/__init__.py", line 6
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nexus'...
Listing './lib/python3.5/site-packages/nexus/media'...
Listing './lib/python3.5/site-packages/nexus/media/css'...
Listing './lib/python3.5/site-packages/nexus/media/img'...
Listing './lib/python3.5/site-packages/nexus/media/img/admin'...
Listing './lib/python3.5/site-packages/nexus/media/img/facebox'...
Listing './lib/python3.5/site-packages/nexus/media/js'...
Listing './lib/python3.5/site-packages/nexus/media/js/lib'...
Listing './lib/python3.5/site-packages/nexus/media/js/lib/facebox'...
Listing './lib/python3.5/site-packages/nexus/templates'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus/admin'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus/admin/dashboard'...
Listing './lib/python3.5/site-packages/nexus/templatetags'...
Listing './lib/python3.5/site-packages/nexus-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/modeldict'...
Listing './share'...
Listing './share/python-wheels'...
